--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-        "@heroicons/react": "^2.2.0",
+        "@heroicons/react": "^1.0.6",
         "@shadcn/ui": "^0.0.4",
         "axios": "^1.3.5",
         "clsx": "^2.1.1",
         "firebase": "^11.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "tailwindcss": "^3.4.17"
+        "react-scripts": "5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.12"
     }
 }
